--- a/.github/workflows/test-macos.yaml
+++ b/.github/workflows/test-macos.yaml
@@ -12,6 +12,7 @@ jobs:
       GOOS: ${{ matrix.goos }}
       GOARCH: ${{ matrix.goarch }}
       GOFLAGS: '-trimpath -mod=readonly'
+      GO111MODULE: 'on'
     strategy:
       fail-fast: false
       matrix:
