Fix switch cases without break

--- a/.github/workflows/test-ubuntu.yaml
+++ b/.github/workflows/test-ubuntu.yaml
@@ -48,11 +48,14 @@ jobs:
             case 'arm64':
               console.log(`::set-env name=GOFLAGS::${process.env.GOFLAGS} -race`)
               console.log('::set-env name=CGO_ENABLED::1')
+              break
             default:
               console.log('::set-env name=CGO_ENABLED::0')
               console.log('::set-env name=GO_EXTLINK_ENABLED::0')
+              break
             }
 
+            // Install QEMU and GCC cross compiler.
             const apt = ['apt-get', 'install', '-y', '--no-install-recommends']
             apt.push('qemu-user')
             apt.push('qemu-user-binfmt')
