Fix deprecation warning

--- a/.github/workflows/test-ubuntu.yaml
+++ b/.github/workflows/test-ubuntu.yaml
@@ -46,12 +46,12 @@ jobs:
             case 'amd64':
             case 'ppc64le':
             case 'arm64':
-              console.log(`::set-env name=GOFLAGS::${process.env.GOFLAGS} -race`)
-              console.log('::set-env name=CGO_ENABLED::1')
+              core.exportVariable('GOFLAGS', `${process.env.GOFLAGS} -race`)
+              core.exportVariable('CGO_ENABLED', '1')
               break
             default:
-              console.log('::set-env name=CGO_ENABLED::0')
-              console.log('::set-env name=GO_EXTLINK_ENABLED::0')
+              core.exportVariable('CGO_ENABLED', '0')
+              core.exportVariable('GO_EXTLINK_ENABLED', '0')
               break
             }
 
