--- a/.github/workflows/test-windows.yaml
+++ b/.github/workflows/test-windows.yaml
@@ -41,12 +41,12 @@ jobs:
             // Set -race flag for supported targets.
             switch (process.env.GOARCH) {
             case 'amd64':
-              console.log(`::set-env name=GOFLAGS::${process.env.GOFLAGS} -race`)
-              console.log('::set-env name=CGO_ENABLED::1')
+              core.exportVariable('GOFLAGS', `${process.env.GOFLAGS} -race`)
+              core.exportVariable('CGO_ENABLED', '1')
               break
             default:
-              console.log('::set-env name=CGO_ENABLED::0')
-              console.log('::set-env name=GO_EXTLINK_ENABLED::0')
+              core.exportVariable('CGO_ENABLED', '0')
+              core.exportVariable('GO_EXTLINK_ENABLED', '0')
               break
             }
 
