--- a/.github/workflows/test-ubuntu.yaml
+++ b/.github/workflows/test-ubuntu.yaml
@@ -55,7 +55,7 @@ jobs:
               break
             }
 
-            // Install QEMU and GCC cross compiler.
+            // Install QEMU and GCC cross compiler. We only need that for -race flag.
             const apt = ['apt-get', 'install', '-y', '--no-install-recommends']
             apt.push('qemu-user')
             apt.push('qemu-user-binfmt')
@@ -65,6 +65,7 @@ jobs:
             case 'arm64':
               apt.push('gcc-aarch64-linux-gnu')
               core.exportVariable('CC', 'aarch64-linux-gnu-gcc')
+              core.exportVariable('PKG_CONFIG_PATH', '/usr/lib/aarch64-linux-gnu/pkgconfig')
               break
             default:
               return
