--- a/.github/workflows/test-linux-arm.yaml
+++ b/.github/workflows/test-linux-arm.yaml
@@ -59,7 +59,7 @@ jobs:
               'list', '-f',
               '{{range context.ReleaseTags}}{{println .}}{{end}}',
               'runtime',
-            ]).toString().split(/\r?\n/)
+            ]).toString().trim().split(/\r?\n/)
 
             // Export cache paths for further steps.
 
