Symlink program loader from cross toolchain to system root

--- a/.github/workflows/test-linux-arm.yaml
+++ b/.github/workflows/test-linux-arm.yaml
@@ -48,7 +48,7 @@ jobs:
 
             core.exportVariable('GOFLAGS', '-trimpath -mod=readonly')
 
-            // Apply GOARCH/GOARM platform hack.
+            // Apply ${GOOS}/${GOARCH}v${GOARM} platform hack.
 
             core.exportVariable('GOARCH', 'arm')
             core.exportVariable('GOARM', goarch.split('v').pop())
