--- a/.github/workflows/test-linux-arm64.yaml
+++ b/.github/workflows/test-linux-arm64.yaml
@@ -52,6 +52,14 @@ jobs:
             core.exportVariable('CC', 'aarch64-linux-gnu-gcc')
             core.exportVariable('PKG_CONFIG_PATH', '/usr/lib/aarch64-linux-gnu/pkgconfig')
 
+            execFileSync('sudo', [
+              'ls',
+              '/usr/lib/aarch64-linux-gnu/pkgconfig',
+              '/usr/aarch64-linux-gnu/pkgconfig',
+            ], {
+              stdio: 'inherit',
+            })
+
             // Get a list of go release tags.
 
             const releaseTags = execFileSync('go', [
@@ -90,7 +98,7 @@ jobs:
 
             // Pass target sysroot and program loader path to QEMU.
 
-            core.exportVariable('QEMU_LD_PREFIX', '/usr/lib/aarch64-linux-gnu')
+            core.exportVariable('QEMU_LD_PREFIX', '/usr/aarch64-linux-gnu')
 
             // Prebuilt Go releases do not contain race detector runtime for non-host architectures.
             // Download syso object for the latest known **major** release and place it in GOROOT.
