--- a/.github/workflows/test-linux-arm.yaml
+++ b/.github/workflows/test-linux-arm.yaml
@@ -77,7 +77,7 @@ jobs:
 
             // Install QEMU.
 
-            const rc = execFileSync('sudo', [
+            execFileSync('sudo', [
               'apt-get', 'install',
               '--no-install-recommends', '-y',
               'qemu-user',
