--- a/.github/workflows/test-linux-arm64.yaml
+++ b/.github/workflows/test-linux-arm64.yaml
@@ -44,12 +44,7 @@ jobs:
             core.exportVariable('GOOS', goos)
             core.exportVariable('GOARCH', goarch)
 
-            core.exportVariable('GOFLAGS', '-race -trimpath -mod=readonly')
-
-            // Enable Cgo explicitly for -race flag since we are cross compiling.
-
-            core.exportVariable('CGO_ENABLED', '1')
-            core.exportVariable('CC', 'aarch64-linux-gnu-gcc')
+            core.exportVariable('GOFLAGS', '-trimpath -mod=readonly')
 
             // Get a list of go release tags.
 
@@ -73,46 +68,15 @@ jobs:
               core.exportVariable('GOMODCACHE', modcache)
             }
 
-            // Install QEMU and GCC cross compiler.
+            // Install QEMU.
 
             execFileSync('sudo', [
               'apt-get', 'install',
               '--no-install-recommends', '-y',
               'qemu-user',
               'qemu-user-binfmt',
-              'gcc-aarch64-linux-gnu',
-              'libc6-dev-arm64-cross',
-              'libtsan0-arm64-cross',
             ], {
               stdio: 'inherit',
-            })
-
-            // Pass target sysroot and program loader path to QEMU.
-
-            core.exportVariable('QEMU_LD_PREFIX', '/usr/aarch64-linux-gnu')
-
-            // Prebuilt Go releases do not contain race detector runtime for non-host architectures.
-            // Download syso object for the latest known **major** release and place it in GOROOT.
-
-            const latestReleaseTag = releaseTags[releaseTags.length-1]
-
-            const goroot = execFileSync('go', ['env', 'GOROOT']).toString().trim()
-
-            const sysoName = `race_${process.env.GOOS}_${process.env.GOARCH}.syso`
-            const sysoPath = `src/runtime/race/${sysoName}`
-            const sysoDest = `${goroot}/${sysoPath}`
-            const sysoURL = 'https://raw.githubusercontent.com/golang/go'
-                          + `/${latestReleaseTag}/${sysoPath}`
-
-            core.info(`Downloading ${sysoName} to ${sysoDest} from ${sysoURL}`)
-            https.get(sysoURL, (resp) => {
-              if (resp.statusCode !== 200) {
-                core.setFailed(`download race runtime: ${resp.statusCode} ${resp.statusMessage}`)
-              }
-              const dest = fs.createWriteStream(sysoDest)
-              resp.pipe(dest)
-            }).on('error', (err) => {
-              core.setFailed(`download race runtime: ${err}`)
             })
 
       - name: Set up cache
