--- a/.github/workflows/test-darwin-amd64.yaml
+++ b/.github/workflows/test-darwin-amd64.yaml
@@ -91,7 +91,7 @@ jobs:
         working-directory: ${{ matrix.main }}
 
       - name: Run tests
-        run: go test -v -coverprofile=coverage.txt -covermode=atomic -timeout=5m ./...
+        run: go test -v -coverprofile=coverage.txt ./...
         working-directory: ${{ matrix.main }}
 
       - name: Upload coverage
