Revert "Don’t pass -v flag to go test"
This reverts commit c579e33f9e02bf1723fbd900f2f0df2b2af44539.

--- a/.github/workflows/test-windows-amd64.yaml
+++ b/.github/workflows/test-windows-amd64.yaml
@@ -94,7 +94,7 @@ jobs:
         # FIXME running with -coverprofile=coverage.txt prints an error; looks like a Go bug.
         # > cannot find module providing package .txt: import lookup disabled by -mod=readonly
         run: |
-          go test -coverprofile=coverage ./...
+          go test -v -coverprofile=coverage ./...
           mv coverage coverage.txt
         working-directory: ${{ matrix.main }}
 
